# homework1

./: README.MD  mirea_1_seminar_students.ipynb  pyproject.toml
